--- a/home/templates/home/get_details.html
+++ b/home/templates/home/get_details.html
@@ -8,13 +8,13 @@
 </head>
 <body>
     {% include 'includes/header.html' %}
-    <form action="{% urls 'user-details' %}" method="POST">
+    <form action="{% url 'user-details' %}" method="POST">
         {% csrf_token %}
         <label>Name</label>
         <input type="text" required placeholder="Name" value="{{ name }}" name="name">
-        {% if role=='admin' %}
+        {% if role is 'admin' %}
             <label>Google Meet Link</label>
-            <input type="text" required placeholder="Google Meet link" value="{{ user.meet_link }}" name="meet_link">
+            <input type="text" required placeholder="Google Meet link" value="{{ meet_link }}" name="meet_link">
         {% endif %}
         <button>Done!</button>
     </form>
