--- a/static/includes/header.css
+++ b/static/includes/header.css
@@ -5,6 +5,9 @@
     flex-direction: row;
     align-items: center;
     justify-items: center;
+    position: fixed;
+    top: 0;
+    z-index: 2000;
 }
 .header-out span{
     margin-left: 1rem;
