--- a/home/static/home/admin_user2.css
+++ b/home/static/home/admin_user2.css
@@ -12,8 +12,9 @@
   
   /* chart */
   #chart {
+    padding-top: 6.5rem;
     margin-left: 2rem;
-    position: absolute;
+    position: fixed;
     height: 40vw;
     width: 40vw;
     display: block;
