--- a/home/templates/home/admin_user.html
+++ b/home/templates/home/admin_user.html
@@ -22,23 +22,33 @@
 </head>
   <body>
     {% include 'includes/header.html' %}
-    <!-- <div class="Outer-div"> -->
-        <div class="box">
-            <div class="clock">
-                <div class="hour">
-                    <div class="hr" id="hr"></div>
-                </div>
-                <div class="min">
-                    <div class="mn" id="mn"></div>
-                </div>
-                <div class="sec">
-                    <div class="sc" id="sc"></div>
-                </div>
+    <div class="outer-left">
+      <div class="box">
+        <div class="clock">
+            <div class="hour">
+                <div class="hr" id="hr"></div>
+            </div>
+            <div class="min">
+                <div class="mn" id="mn"></div>
+            </div>
+            <div class="sec">
+                <div class="sc" id="sc"></div>
             </div>
         </div>
-        <div id="chart"></div>
-        </div>
-    <!-- </div> -->
+      </div>
+      <div id="chart"></div>
+      <form class="outer-form" action="{% url 'home' %}" method="post">
+        {% csrf_token %}
+        <span class="second">Enter The Date</span>
+        <input class="one" type="date" name="date" placeholder="Enter the Date">
+        <span class="second">Enter the start time</span>
+        <input class="one" type="time" name="start_time" placeholder="Enter the start time">
+        <span class="second">Enter the end time</span>
+        <input class="one" type="time" name="end_time" placeholder="Enter the end time">
+        <button class="form-button">Create slot!</button>
+      </form>    
+    </div>
+    {% include 'includes/footer.html' %}
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.min.js'></script>
