--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -11,7 +11,7 @@
 <body>
     <div class="footer-outer">
         <div class="footer-inner">
-            <p>#SosUkraine made by Manan Jain and Shubham Bansal</p>
+            <p>#Made by BugHunters</p>
             <p>&#169 Copyright All Rights Reserved!</p>
         </div>
     </div>
